--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "street-fighter",
   "version": "1.0.0",
-  "description": "",
+  "description": "Try to do the game",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1"
+  },
   "dependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.4.2",
     "style-loader": "^1.1.3",
@@ -22,5 +22,13 @@
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Flash5482/Game.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Flash5482/Game/issues"
+  },
+  "homepage": "https://github.com/Flash5482/Game#readme"
 }
